--- a/index.html
+++ b/index.html
@@ -3,7 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>extasy.studio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="mainContent">
+      <div class="imgContent">
+        <img src="/img/bg.png" />
+      </div>
+      <div class="buttonsGroup">
+        <a class="button Telegram" href="https://t.me/iamextasy">
+          <span class="icon">Telegram</span>
+        </a>
+        <a class="button Lolzteam" href="https://lolz.live/extasy/">
+          <span class="icon">Lolzteam</span>
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
