--- a/bloodteam/index.html
+++ b/bloodteam/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redirect...</title>
-    <meta
-      http-equiv="refresh"
-      content="0;URL=https://lolz.live/threads/3936493/"
-    />
+    <meta http-equiv="refresh" content="0;URL=/bloodteam/video.mp4" />
   </head>
   <body></body>
 </html>
