--- a/bloodproj/index.html
+++ b/bloodproj/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redirect...</title>
-    <meta http-equiv="refresh" content="0;URL=/bloodteam/video.mp4" />
+    <meta http-equiv="refresh" content="0;URL=/bloodproj/video.mp4" />
   </head>
   <body></body>
 </html>
