--- a/yakuza/index.html
+++ b/yakuza/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hydra Site</title>
     <meta property="og:title" content="Hydra типо якуза да брат" />
-    <meta property="og:image" content="/img/og_img.jpg" />
+    <meta property="og:image" content="./img/og_img.jpg" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
     <div class="container">
         <header>
             <div class="logo-section">
-                <img src="/img/logo.jpg">
+                <img src="./img/logo.jpg">
                 <a href="">
                     YAKUZA BIO
                 </a>
@@ -156,55 +156,55 @@
                         <span class="text-bk">
                             Наведитесь чтобы посмотреть на фото
                         </span>
-                        <img src="/img/1.jpg">
+                        <img src="./img/1.jpg">
                     </div>
                     <div class="img-blur">
                         <span class="text-bk">
                             Наведитесь чтобы посмотреть на фото
                         </span>
-                        <img src="/img/2.jpg">
+                        <img src="./img/2.jpg">
                     </div>
                     <div class="img-blur">
                         <span class="text-bk">
                             Наведитесь чтобы посмотреть на фото
                         </span>
-                        <img src="/img/3.jpg">
+                        <img src="./img/3.jpg">
                     </div>
                     <div class="img-blur">
                         <span class="text-bk">
                             Наведитесь чтобы посмотреть на фото
                         </span>
-                        <img src="/img/4.jpg">
+                        <img src="./img/4.jpg">
                     </div>
                     <div class="img-blur">
                         <span class="text-bk">
                             Наведитесь чтобы посмотреть на фото
                         </span>
-                        <img src="/img/5.jpg">
+                        <img src="./img/5.jpg">
                     </div>
                     <div class="img-blur">
                         <span class="text-bk">
                             Наведитесь чтобы посмотреть на фото
                         </span>
-                        <img src="/img/6.jpg">
+                        <img src="./img/6.jpg">
                     </div>
                     <div class="img-blur">
                         <span class="text-bk">
                             Наведитесь чтобы посмотреть на фото
                         </span>
-                        <img src="/img/7.jpg">
+                        <img src="./img/7.jpg">
                     </div>
                     <div class="img-blur">
                         <span class="text-bk">
                             Наведитесь чтобы посмотреть на фото
                         </span>
-                        <img src="/img/8.jpg">
+                        <img src="./img/8.jpg">
                     </div>
                     <div class="img-blur">
                         <span class="text-bk">
                             Наведитесь чтобы посмотреть на фото
                         </span>
-                        <img src="/img/9.jpg">
+                        <img src="./img/9.jpg">
                     </div>
                 </div>
             </div>
