--- a/yakuza/index.html
+++ b/yakuza/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hydra Site</title>
     <meta property="og:title" content="Hydra типо якуза да брат" />
+    <meta property="og:description" content="Подписывайтесь на мой телеграм блог добавляйте строницу в избронное" />
     <meta property="og:image" content="./img/og_img.jpg" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
