--- a/yakuza/index.html
+++ b/yakuza/index.html
@@ -7,7 +7,7 @@
     <title>Hydra Site</title>
     <meta property="og:title" content="Hydra типо якуза да брат" />
     <meta property="og:description" content="Подписывайтесь на мой телеграм блог добавляйте строницу в избронное" />
-    <meta property="og:image" content="./img/og_img.jpg" />
+    <meta property="og:image" content="https://extasy.studio/yakuza/img/og_img.jpg" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
